<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_activity_add_product__linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Product Name -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_product__name_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/id_activity_add_product__product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_add_product__name_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="16sp" />

            <!-- Product Image -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_product__image_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/id_activity_add_product__image_url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_add_product__image_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="3"
                android:textSize="16sp" />

            <!-- Product Price -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_product__price_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/id_activity_add_product__price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_add_product__price_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="16sp" />

            <!-- Button -->

            <Button
                android:id="@+id/id_activity_add_product__button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Add Product" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>