<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--=============== FIRST LINE ===============-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!-- Increase Quantity -->

        <LinearLayout
            android:id="@+id/id_activity_details__increase_quantity_linear_layout"
            style="@style/LineLinearLayout"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_add_circle_black_48dp" />

            <TextView
                style="@style/LineButton"
                android:text="@string/activity_details__increase_quantity" />
        </LinearLayout>

        <!-- Type Quantity -->

        <TextView
            android:id="@+id/id_activity_details__type_quantity_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/grey_500"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/activity_details__type_quantity" />
            android:textColor="@color/grey_100"
            android:textSize="14sp" />

        <!-- Decrease Quantity -->

        <LinearLayout
            android:id="@+id/id_activity_details__decrease_quantity_linear_layout"
            style="@style/LineLinearLayout"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_remove_circle_black_48dp" />

            <TextView
                style="@style/LineButton"
                android:text="@string/activity_details__decrease_quantity" />
        </LinearLayout>
    </LinearLayout>

    <!--=============== SECOND LINE ===============-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <!-- Order More -->

        <LinearLayout
            android:id="@+id/id_activity_details__order_more_linear_layout"
            style="@style/LineLinearLayout"
            android:layout_width="110dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_more_horiz_black_48dp" />

            <TextView
                style="@style/LineButton"
                android:text="@string/activity_details__order_more" />
        </LinearLayout>

        <!-- Delete Product -->

        <LinearLayout
            android:id="@+id/id_activity_details__delete_product_linear_layout"
            style="@style/LineLinearLayout"
            android:layout_width="110dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_clear_black_48dp" />

            <TextView
                style="@style/LineButton"
                android:text="@string/activity_details__delete_product" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>