<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_400"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <!--=============== SALE UNIT OF PRODUCT ===============-->

        <ImageView
            android:id="@+id/id_adapter_inventory__sale_product_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/ic_remove_circle_black_48dp" />

        <LinearLayout
            android:id="@+id/id_adapter_inventory__linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_400"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <!--=============== IMAGE ===============-->

            <ImageView
                android:id="@+id/id_adapter_inventory__image_view"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:background="@color/grey_700"
                android:scaleType="fitXY" />

            <!--=============== HEADER ===============-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <!-- Name -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TitleTextView"
                        android:text="@string/adapter_inventory__name_label" />

                    <TextView
                        android:id="@+id/id_adapter_inventory__name_text_view"
                        style="@style/FieldTextView" />
                </LinearLayout>

                <!-- Quantity Available -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TitleTextView"
                        android:text="@string/adapter_inventory__quantity_label" />

                    <TextView
                        android:id="@+id/id_adapter_inventory__quantity_text_view"
                        style="@style/FieldTextView" />
                </LinearLayout>

                <!-- Price -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TitleTextView"
                        android:text="@string/adapter_inventory__price" />

                    <TextView
                        android:id="@+id/id_adapter_inventory__price_text_view"
                        style="@style/FieldTextView" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--=============== SEPARATOR ===============-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />
</LinearLayout>